# Crackbit

./: CMakeLists.txt  LaunchCrackBit.bat  README.md  address_matcher.cu  address_matcher.h  address_utils.cpp  address_utils.h  benchmark_suite.cpp  benchmark_suite.h  bitcoin_utils.cpp  bitcoin_utils.h  bloom_manager.cpp  bloom_manager.h  build.sh  chmod +x CrackBit.sh  crackbit.cpp  cuda_kernels.cu  key_generator.cpp  key_generator.h  memory_manager.cpp  memory_manager.h  puzzle_config.h  range_converter.cpp  range_converter.h  settings.txt
